syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service Inventory{
  rpc SetInv(GoodsInvInfo) returns (google.protobuf.Empty); // set goods' stocks
  rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo); // get inventory info
  rpc Sell(SellInfo) returns (google.protobuf.Empty); // batch deduct inventory
  rpc Reback(SellInfo) returns (google.protobuf.Empty); // return the inventory
}

message GoodsInvInfo {
  int32 goodsId = 1;
  int32 num = 2;
}

message  SellInfo {
  repeated GoodsInvInfo goodsInfo = 1;
  string orderSn =2;
}